# MyJson_Parser

./: .gitignore  CMakeLists.txt  readme.md
BenchMark_Tool/: Timer.cpp  scienum.cpp
include/: JObject.h  Parser.h
src/: main.cpp  test_Json_Parser.cpp  test_parse_Speed.cpp  test_serialize.cpp
test_json/: test.json  vscode_Nocomment.json  vscode_comment.json
